--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
@@ -30,7 +31,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.0.1",
     "eslint-plugin-react": "^7.14.2"
   }
 }
