--- a/src/auth_config.json
+++ b/src/auth_config.json
@@ -1,4 +1,5 @@
 {
   "domain": "captwostore.auth0.com",
-  "clientId": "uOHwBkQR55sKbVz9FfHaKEoBfNM9Ce21"
+  "clientId": "uOHwBkQR55sKbVz9FfHaKEoBfNM9Ce21",
+  "audience": "http://localhost:8080"
 }
